--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                 <ul class="details__info">
                     <li>Ngày làm - <span>4 tháng 12 2023</span></li>
                     <li>Ứng dụng - <span>html css</span></li>
-                    <li>View - <span><a href="https://theduyweb374.000webhostapp.com/b%C3%A0i%201%20bu%E1%BB%95i%203.html" target="_blank">LINK BAI TAP</a></span></li>
+                    <li>View - <span><a href="https://theduyweb374.000webhostapp.com/b3b1.html" target="_blank">LINK BAI TAP</a></span></li>
                 </ul>
             </div>
         </div>
@@ -640,7 +640,7 @@
                 <ul class="details__info">
                     <li>Ngày làm - <span>4 tháng 12 2023</span></li>
                     <li>Ứng dụng - <span>html css</span></li>
-                    <li>View - <span><a href="https://theduyweb374.000webhostapp.com/b%C3%A0i%202%20bu%E1%BB%95i%203.html" target="_blank">LINK BAI TAP</a></span></li>
+                    <li>View - <span><a href="https://theduyweb374.000webhostapp.com/b3b2.html" target="_blank">LINK BAI TAP</a></span></li>
                 </ul>
             </div>
         </div>
@@ -658,7 +658,7 @@
                 <ul class="details__info">
                     <li>Ngày làm - <span>4 tháng 12 2023</span></li>
                     <li>Ứng dụng - <span>html css</span></li>
-                    <li>View - <span><a href="https://theduyweb374.000webhostapp.com/b%C3%A0i%20tr%C3%AAn%20l%E1%BB%9Bp.html" target="_blank">LINK BAI TAP</a></span></li>
+                    <li>View - <span><a href="https://theduyweb374.000webhostapp.com/b3btt;.html" target="_blank">LINK BAI TAP</a></span></li>
                 </ul>
             </div>
         </div>
@@ -676,43 +676,223 @@
                 <ul class="details__info">
                     <li>Ngày làm - <span>17 tháng 12 2023</span></li>
                     <li>Ứng dụng - <span>HTML & CSS</span></li>
-                    <li>View - <span><a href="" target="_blank">LINK BAI TAP</a></span></li>
+                    <li>View - <span><a href="https://theduyweb374.000webhostapp.com/b4b1.html" target="_blank">LINK BAI TAP</a></span></li>
                 </ul>
             </div>
         </div>
 
-        <div class="work__card mix web">
+        <div class="work__card mix four">
             <!-- =====GẮN LINK ẢNH WORK===== -->
             <img src="/img/homework-theme.jpg" alt="" class="work__img"> 
-            <h3 class="work__title">Buổi 6 </h3>
+            <h3 class="work__title">Bài 3 </h3>
             <span class="work__button">Demo
                 <i class="uil uil-arrow-right work__button-icon"></i>
             </span>
             <div class="portfolio__item-details">
-                <h3 class="details__title">app for techno</h3>
-                <p class="details__description">TYPE SOME THING ABOUT THE PICTURE</p>
+                <h3 class="details__title">Bài 3</h3>
+                <p class="details__description">HTML & CSS</p>
                 <ul class="details__info">
-                    <li>Created - <span>4 oct 2023</span></li>
-                    <li>Technologies - <span>html css</span></li>
-                    <li>View - <span><a href="#" target="_blank">LINK BAI TAP</a></span></li>
+                    <li>Ngày làm - <span>17 tháng 12 2023</span></li>
+                    <li>Ứng dụng - <span>HTML & CSS</span></li>
+                    <li>View - <span><a href="https://theduyweb374.000webhostapp.com/b4b3.html" target="_blank">LINK BAI TAP</a></span></li>
                 </ul>
             </div>
         </div>
 
-        <div class="work__card mix web">
+        <div class="work__card mix four">
             <!-- =====GẮN LINK ẢNH WORK===== -->
             <img src="/img/homework-theme.jpg" alt="" class="work__img"> 
-            <h3 class="work__title">buổi 7 </h3>
+            <h3 class="work__title">Bài 4 </h3>
             <span class="work__button">Demo
                 <i class="uil uil-arrow-right work__button-icon"></i>
             </span>
             <div class="portfolio__item-details">
-                <h3 class="details__title">app for techno</h3>
-                <p class="details__description">TYPE SOME THING ABOUT THE PICTURE</p>
+                <h3 class="details__title">Bài 4</h3>
+                <p class="details__description">HTML & CSS</p>
                 <ul class="details__info">
-                    <li>Created - <span>4 oct 2023</span></li>
-                    <li>Technologies - <span>html css</span></li>
-                    <li>View - <span><a href="#" target="_blank">LINK BAI TAP</a></span></li>
+                    <li>Ngày làm - <span>17 tháng 12 2023</span></li>
+                    <li>Ứng dụng - <span>HTML & CSS</span></li>
+                    <li>View - <span><a href="https://theduyweb374.000webhostapp.com/b4b4.html" target="_blank">LINK BAI TAP</a></span></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="work__card mix four">
+            <!-- =====GẮN LINK ẢNH WORK===== -->
+            <img src="/img/homework-theme.jpg" alt="" class="work__img"> 
+            <h3 class="work__title">Bài 5 </h3>
+            <span class="work__button">Demo
+                <i class="uil uil-arrow-right work__button-icon"></i>
+            </span>
+            <div class="portfolio__item-details">
+                <h3 class="details__title">Bài 5</h3>
+                <p class="details__description">HTML & CSS</p>
+                <ul class="details__info">
+                    <li>Ngày làm - <span>17 tháng 12 2023</span></li>
+                    <li>Ứng dụng - <span>HTML & CSS</span></li>
+                    <li>View - <span><a href="https://theduyweb374.000webhostapp.com/b4b5.html" target="_blank">LINK BAI TAP</a></span></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="work__card mix five">
+            <!-- =====GẮN LINK ẢNH WORK===== -->
+            <img src="/img/homework-theme.jpg" alt="" class="work__img"> 
+            <h3 class="work__title">Bài trên lớp </h3>
+            <span class="work__button">Demo
+                <i class="uil uil-arrow-right work__button-icon"></i>
+            </span>
+            <div class="portfolio__item-details">
+                <h3 class="details__title">Bài trên lớp</h3>
+                <p class="details__description">HTML, CSS & JS</p>
+                <ul class="details__info">
+                    <li>Ngày làm - <span>8 tháng 1 2024</span></li>
+                    <li>Ứng dụng - <span>HTML, CSS & JS</span></li>
+                    <li>View - <span><a href="https://theduyweb374.000webhostapp.com/bttl.html" target="_blank">LINK BAI TAP</a></span></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="work__card mix five">
+            <!-- =====GẮN LINK ẢNH WORK===== -->
+            <img src="/img/homework-theme.jpg" alt="" class="work__img"> 
+            <h3 class="work__title">Bài 1 </h3>
+            <span class="work__button">Demo
+                <i class="uil uil-arrow-right work__button-icon"></i>
+            </span>
+            <div class="portfolio__item-details">
+                <h3 class="details__title">Bài 1</h3>
+                <p class="details__description">HTML & JS</p>
+                <ul class="details__info">
+                    <li>Ngày làm - <span>8 tháng 1 2024</span></li>
+                    <li>Ứng dụng - <span>HTML & JS</span></li>
+                    <li>View - <span><a href="https://theduyweb374.000webhostapp.com/b5b1.html" target="_blank">LINK BAI TAP</a></span></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="work__card mix five">
+            <!-- =====GẮN LINK ẢNH WORK===== -->
+            <img src="/img/homework-theme.jpg" alt="" class="work__img"> 
+            <h3 class="work__title">Bài 2 </h3>
+            <span class="work__button">Demo
+                <i class="uil uil-arrow-right work__button-icon"></i>
+            </span>
+            <div class="portfolio__item-details">
+                <h3 class="details__title">Bài 2</h3>
+                <p class="details__description">HTML & JS</p>
+                <ul class="details__info">
+                    <li>Ngày làm - <span>8 tháng 1 2024</span></li>
+                    <li>Ứng dụng - <span>HTML & JS</span></li>
+                    <li>View - <span><a href="https://theduyweb374.000webhostapp.com/b5b2.html" target="_blank">LINK BAI TAP</a></span></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="work__card mix five">
+            <!-- =====GẮN LINK ẢNH WORK===== -->
+            <img src="/img/homework-theme.jpg" alt="" class="work__img"> 
+            <h3 class="work__title">Bài 3 </h3>
+            <span class="work__button">Demo
+                <i class="uil uil-arrow-right work__button-icon"></i>
+            </span>
+            <div class="portfolio__item-details">
+                <h3 class="details__title">Bài 3</h3>
+                <p class="details__description">HTML & JS</p>
+                <ul class="details__info">
+                    <li>Ngày làm - <span>8 tháng 1 2024</span></li>
+                    <li>Ứng dụng - <span>HTML & JS</span></li>
+                    <li>View - <span><a href="https://theduyweb374.000webhostapp.com/b5b3.html" target="_blank">LINK BAI TAP</a></span></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="work__card mix six">
+            <!-- =====GẮN LINK ẢNH WORK===== -->
+            <img src="/img/homework-theme.jpg" alt="" class="work__img"> 
+            <h3 class="work__title">Bài 1 </h3>
+            <span class="work__button">Demo
+                <i class="uil uil-arrow-right work__button-icon"></i>
+            </span>
+            <div class="portfolio__item-details">
+                <h3 class="details__title">Bài 1</h3>
+                <p class="details__description">HTML & JS</p>
+                <ul class="details__info">
+                    <li>Ngày làm - <span>15 tháng 1 2024</span></li>
+                    <li>Ứng dụng - <span>HTML % JS</span></li>
+                    <li>View - <span><a href="https://theduyweb374.000webhostapp.com/b6-1.html" target="_blank">LINK BAI TAP</a></span></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="work__card mix six">
+            <!-- =====GẮN LINK ẢNH WORK===== -->
+            <img src="/img/homework-theme.jpg" alt="" class="work__img"> 
+            <h3 class="work__title">Bài 2 </h3>
+            <span class="work__button">Demo
+                <i class="uil uil-arrow-right work__button-icon"></i>
+            </span>
+            <div class="portfolio__item-details">
+                <h3 class="details__title">Bài 2</h3>
+                <p class="details__description">HTML & JS</p>
+                <ul class="details__info">
+                    <li>Ngày làm - <span>15 tháng 1 2024</span></li>
+                    <li>Ứng dụng - <span>HTML % JS</span></li>
+                    <li>View - <span><a href="https://theduyweb374.000webhostapp.com/b6-2.html" target="_blank">LINK BAI TAP</a></span></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="work__card mix six">
+            <!-- =====GẮN LINK ẢNH WORK===== -->
+            <img src="/img/homework-theme.jpg" alt="" class="work__img"> 
+            <h3 class="work__title">Bài 4 </h3>
+            <span class="work__button">Demo
+                <i class="uil uil-arrow-right work__button-icon"></i>
+            </span>
+            <div class="portfolio__item-details">
+                <h3 class="details__title">Bài 4</h3>
+                <p class="details__description">HTML & JS</p>
+                <ul class="details__info">
+                    <li>Ngày làm - <span>15 tháng 1 2024</span></li>
+                    <li>Ứng dụng - <span>HTML % JS</span></li>
+                    <li>View - <span><a href="https://theduyweb374.000webhostapp.com/b6-b4.html" target="_blank">LINK BAI TAP</a></span></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="work__card mix seven">
+            <!-- =====GẮN LINK ẢNH WORK===== -->
+            <img src="/img/homework-theme.jpg" alt="" class="work__img"> 
+            <h3 class="work__title">Bài 7 </h3>
+            <span class="work__button">Demo
+                <i class="uil uil-arrow-right work__button-icon"></i>
+            </span>
+            <div class="portfolio__item-details">
+                <h3 class="details__title">Bài 7</h3>
+                <p class="details__description">HTML, CSS & JS</p>
+                <ul class="details__info">
+                    <li>Ngày làm - <span>22 tháng 1 2024</span></li>
+                    <li>Ứng dụng - <span>HTML, CSS % JS</span></li>
+                    <li>View - <span><a href="https://theduyweb374.000webhostapp.com/b7b7.html" target="_blank">LINK BAI TAP</a></span></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="work__card mix seven">
+            <!-- =====GẮN LINK ẢNH WORK===== -->
+            <img src="/img/homework-theme.jpg" alt="" class="work__img"> 
+            <h3 class="work__title">Bài 8 </h3>
+            <span class="work__button">Demo
+                <i class="uil uil-arrow-right work__button-icon"></i>
+            </span>
+            <div class="portfolio__item-details">
+                <h3 class="details__title">Bài 8</h3>
+                <p class="details__description">HTML & JS</p>
+                <ul class="details__info">
+                    <li>Ngày làm - <span>22 tháng 1 2024</span></li>
+                    <li>Ứng dụng - <span>HTML, CSS % JS</span></li>
+                    <li>View - <span><a href="https://theduyweb374.000webhostapp.com/b7b8.html" target="_blank">LINK BAI TAP</a></span></li>
                 </ul>
             </div>
         </div>
@@ -755,13 +935,13 @@
                 <div class="testimonial__quote">
                     <i class='bx bxs-quote-alt-left'></i>
                 </div>
-                <p class="tesimonial__description">blo bla</p>
-                <h3 class="testimonial__date">4 Thang 2 2024</h3>
+                <p class="tesimonial__description">Bạn ấy giúp đỡ em rất nhiều trong các buổi học và cả những bài tập cô giao. </p>
+                <h3 class="testimonial__date">4 Tháng 2 2024</h3>
                 <div class="testimonial__profile">
                     <img src="/img/client-1.jpg" alt="" class="testimonial__profile-img">
 
                     <div class="testimonial__profile-data">
-                        <span class="testimonial__profile-name">Nguyen Tra Ly</span>
+                        <span class="testimonial__profile-name">Nguyễn Xuân Đài</span>
                         <span class="testimonial__profile-detail">Classmate</span>
                     </div>
                 </div>
@@ -771,30 +951,30 @@
                 <div class="testimonial__quote">
                     <i class='bx bxs-quote-alt-left'></i>
                 </div>
-                <p class="tesimonial__description">blo bla</p>
-                <h3 class="testimonial__date">4 Thang 2 2024</h3>
+                <p class="tesimonial__description">Bạn ấy rất chăm chú trong những tiết học, tuy là có hay đi muộn nhưng bạn luôn cố gắng qua từng tiết.</p>
+                <h3 class="testimonial__date">15 Tháng 1 2024</h3>
                 <div class="testimonial__profile">
                     <img src="/img/client-2.jpg" alt="" class="testimonial__profile-img">
 
                     <div class="testimonial__profile-data">
-                        <span class="testimonial__profile-name">Hoang Bao My</span>
-                        <span class="testimonial__profile-detail">Sister</span>
+                        <span class="testimonial__profile-name">Trần Đăng Anh</span>
+                        <span class="testimonial__profile-detail">Classmate</span>
                     </div>
                 </div>
-                 </div>
+            </div>
 
                 <div class="testimonial__card swiper-slide">
                 <div class="testimonial__quote">
                     <i class='bx bxs-quote-alt-left'></i>
                 </div>
-                <p class="tesimonial__description"></p>
-                <h3 class="testimonial__date">4 Thang 2 2024</h3>
+                <p class="tesimonial__description">Duy và em đã giúp đỡ nhau hoàn thiện bài 30% cho dù còn hơi sơ sài nhưng em thấy được sự quyết tâm trong bạn. </p>
+                <h3 class="testimonial__date">28 Tháng 12 2024</h3>
                 <div class="testimonial__profile">
                     <img src="/img/client-3.jpg" alt="" class="testimonial__profile-img">
 
                     <div class="testimonial__profile-data">
-                        <span class="testimonial__profile-name">Hoang Bao Tu</span>
-                        <span class="testimonial__profile-detail">Sister</span>
+                        <span class="testimonial__profile-name">Nguyễn Thanh Tùng</span>
+                        <span class="testimonial__profile-detail">Classmate</span>
                     </div>
                 </div>
                  </div>
